--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,17 +1,31 @@
-<% @page_title = "Create Product" %>
-
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
+<% @page_title = "Add New Product" %>
 
 <div class="product new">
-  <h2>Create Product</h2>
-  
-  <%= form_for(:product,:html => { :multipart => true }, :url => {:action => 'create'}) do |f| %>
-  
-    <%= render(:partial => 'form', :locals => {:f => f}) %>
-    
-    <div class="form-buttons">
-      <%= submit_tag("Create Product") %>
+    <h1 class="pagetitle">Create Product</h1>
+    <hr />
+    <div class='alignleft'>
+        <%= link_to(content_tag( :span, "Back to List"), {:action => 'list'}, :class => 'button') %>
+
     </div>
-    
-  <% end %>
-</div>
+    <br/>
+    <hr />
+    <div id="content-full">
+        <%= form_for(:product, :html => { :multipart => true }, :url => {:action => 'create'}) do |f| %>
+        <div id="contleft">
+            <hr/>
+            <div id='conthold'>
+
+                <br/>
+                <h5>Use the following form to add new Product.</h5>
+                <%= render(:partial => "form", :locals => {:f => f}) %>
+
+                <div class="tool_btn">
+                    <input type="submit" name="submit" class="button" value="Create Product" />
+                </div>
+                <hr/>
+            </div>
+            <% end %>
+
+        </div>
+    </div>
+
