--- a/app/views/categories/delete.html.erb
+++ b/app/views/categories/delete.html.erb
@@ -1,24 +1,35 @@
 <% @page_title = "Delete Category: #{@category.name}" %>
 
-<div class="category delete">
-  <h2>Delete Category</h2>
-  <%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
-  
-  <%= form_for(:category, :url => {:action => 'destroy', :id => @category.id}) do |f| -%>
-
-    <p>Are you sure you want to permanently delete this category?</p>
-	<ul class="categ-type1">
-		<li>
-			<div class="categ-img-type1" >
-			<h2><%= @category.name %></h2>
-			<a href="#"><img src="<%= @category.photo.url(:small) %>"></a>
-			</div>					
-		</li>
-	</ul>
-  
-    <div class="form-buttons">
-      <%= submit_tag("Delete Category") %>
+<h2 class="pagetitle">Delete Category</h2>
+<hr />
+<div class='alignleft'>
+    <%= link_to(content_tag( :span, "Back to List"), {:action => 'list'}, :class => 'button') %>
+</div>
+<br/>
+<hr />
+<div id="content-full">
+    <div id="contleft">
+        <%= form_for(:category, :url => {:action => 'destroy', :id => @category.id}) do |f| %>
+        <hr/>
+        <div id='conthold'>
+           
+            <ul class="categ-type1">
+                <li>
+                    <div class="categ-img-type1" >
+                        <h2><%= @category.name %></h2>
+                        <a href="#">
+                        <img src="<%= @category.photo.url(:small) %>"></a>
+                    </div>
+                </li>
+            </ul>
+             <h6>
+                Are you sure you want to permanently delete this category?
+            </h6>
+            <div class="tool_btn">
+                <input type="submit" name="submit" class="button" value="Delete Category" />
+            </div>
+        <hr/>
+        </div>
+        <% end %>
     </div>
-    
-  <% end %>
 </div>
