--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,31 +1,66 @@
 <% @page_title = "Show Category: #{@category.name}" %>
 
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
-
 <div class="category show">
-  <h2>Show Category</h2>
+    <h2 class="pagetitle">Category detail view:</h2>
+    <hr />
+    <div class='alignleft'>
+        <%= link_to(content_tag( :span, "Back to List"), {:action => 'list'}, :class => 'button') %>
+    </div>
+    <br/>
+    <hr />
 
-  <table summary="Category detail view">
-    <tr>
-      <th>Name</th>
-      <td><%= @category.name %></td>
-    </tr>
-    <tr>
-      <th>Position</th>
-      <td><%= @category.position %></td>
-    </tr>
-    <tr>
-      <th>Visible?</th>
-      <td><%= @category.visible ? 'true' : 'false' %></td>
-    </tr>
-    <tr>
-      <th>Created</th>
-      <td><%= @category.created_at %></td>
-    </tr>
-    <tr>
-      <th>Updated</th>
-      <td><%= @category.updated_at %></td>
-    </tr>
-  </table>
-  
-</div>
+    <div id="content-full">
+        <div id="contsmallleft">
+            <hr/>
+            <div id='conthold' align="center">
+
+                <br/>
+                <h2 ><%= @category.name %></h2>
+                <%= image_tag @category.photo.url(:large) %>
+
+                <hr/>
+            </div>
+        </div>
+        <div id="contleft">
+            <hr/>
+            <div id='conthold'>
+              
+            <table border="0">
+              <tr>
+                <td><b>Category Name:</b></td>
+                <td><%= @category.name %></td>
+              </tr>
+              <tr>
+                <td><b>Position:</b></td>
+                <td><%= @category.position %></td>
+              </tr>
+                <tr>
+                <td><b>Visible?</b></td>
+                <td><%= @category.visible ? 'true' : 'false' %></td>
+              </tr>
+              <tr>
+                <td><b>Created:</b></td>
+                <td><%= @category.created_at %></td>
+              </tr>
+                  <tr>
+                <td><b>Status:</b></td>
+                <td>aaa</td>
+              </tr>
+              <tr>
+                <td><b>Updated:</b></td>
+                <td><%= @category.updated_at %></td>
+              </tr>
+            </table>
+              
+                <hr/>
+            </div>
+            <hr/>
+            <%= link_to(content_tag( :span, "Edit"), {:action => 'edit', :id => @category.id}, :class => 'button') %>
+            <%= link_to(content_tag( :span, "Delete"), {:action => 'delete', :id => @category.id}, :class => 'button') %>
+        </div>
+        <div class="clear">
+        </div>
+        <p>
+            Ut enim ad minim veniam Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+        </p>
+    </div>
