--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,62 +1,82 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
+"http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>University Asset Management System | <%= @page_title || 'Admin Area' %></title>
-    <meta name="author" content="Labinot Halilaj">
-	<%= stylesheet_link_tag('style', 'inner', 'jquery-ui-1.8.8.custom' , 'demo_table_jui', 'TableTools', :media => 'all') %>
-	<%= javascript_include_tag :defaults, 'jquery.dataTables.js', 'jquery-ui-1.8.8.custom.min.js', 'TableTools.js', 'ZeroClipboard.js' %>
-	<script type="text/javascript" charset="utf-8">
-		$(document).ready(function() {
-			$('#example').dataTable({
-			"sDom": 'T<"clear">lfrtip',
-			"oTableTools": {
-			"sSwfPath": "../swf/copy_cvs_xls_pdf.swf"
-			}
-			});
-		} );
-	</script>
-  </head>
-  <body>
-<div id="wrapper">
-	<div id="container">
-		<div id="top">
-			<div id="logo">
-				<%= image_tag('themeimg/logo.gif', :align => 'left',  :alt => 'University Asset Management System') %>		
-			</div><!-- end #logo -->
-		</div><!-- end #top -->
-		
-
-		<div id="topnavigation">
-			<form  method="get" action="" id="searchform">
-				<div><input type="text" class="inputbox" value="search" onblur="if (this.value == ''){this.value = 'search'; }" onfocus="if (this.value == 'search') {this.value = ''; }"/></div>
-			</form>
-			<ul id="topnav">
-				<li><a href="http://192.168.0.1:3000">Home</a></li>
-				<li><a class="current" href="http://192.168.0.1:3000/categories">Categories</a></li>
-				<li><a href="http://192.168.0.1:3000/products">Products</a></li>
-				<li><a href="http://192.168.0.1:3000/suppliers">Suppliers</a></li>
-				<li><a href="http://192.168.0.1:3000/workers">Workers</a></li>
-				<li><a href="http://192.168.0.1:3000/categories">Cargo</a></li>
-			</ul><!-- end #topnav -->
-		</div><!-- end #topnavigation -->
-		 <% if !flash[:notice].blank? %>
-		  <div class="notice">
-			<%= flash[:notice] %>
-		  </div>
-		  <% end %>
-		<div id="content">
-		<%= yield %>
-			<div class="clear"></div>
-		</div><!-- end #content -->
-		
-		<div id="footer">
-			<div id="footer-text">
-				<p id="copyright">&copy; oseose.com / Labinot Halilaj / All Rights Reserved</p> 
-			</div><!-- end #footer-text -->
-		</div><!-- end #footer -->
-	</div><!-- end #container -->	
-</div>
-  </body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <title>University Asset Management System | <%= @page_title || 'Admin Area' %></title>
+        <meta name="author" content="Labinot Halilaj">
+        <%= stylesheet_link_tag('style', 'demo_table_jui', 'TableTools', :media => 'all') %>
+        <%= javascript_include_tag :defaults, 'jquery.dataTables.js', 'TableTools.js', 'ZeroClipboard.js' %>
+        <script type="text/javascript" charset="utf-8">
+            $(document).ready( function() {
+                $('#example').dataTable({
+                    "sDom": 'T<"clear">lfrtip',
+                    "oTableTools": {
+                        "sSwfPath": "../swf/copy_cvs_xls_pdf.swf"
+                    }
+                });
+            } );
+        </script>
+    </head>
+    <body>
+        <div id="wrapper">
+            <div id="container">
+                <div id="top">
+                    <div id="logo">
+                        <%= image_tag('themeimg/logo.gif', :align => 'left',  :alt => 'University Asset Management System') %>
+                    </div><!-- end #logo -->
+                </div><!-- end #top -->
+                <div id="topnavigation">
+                    <ul id="topnav">
+                        <li>
+                            <a href="http://localhost:3000">Home</a>
+                        </li>
+                        <li>
+                            <%= link_to("Categories", :controller => 'categories') %>
+                        </li>
+                        <li>
+                            <%= link_to("Products", :controller => 'products') %>
+                        </li>
+                        <li>
+                            <%= link_to("Suppliers", :controller => 'suppliers') %>
+                        </li>
+                        <li>
+                            <%= link_to("Workers", :controller => 'workers') %>
+                        </li>
+                        <li>
+                            <%= link_to("Cargo", :controller => 'cargo') %>
+                        </li>
+                        <li>
+                            <%= link_to("Admin Users", :controller => 'admin_users') %>
+                        </li>
+                        <li>
+                            <%= link_to("Logout", :action => 'logout') %>
+                        </li>
+                    </ul>
+                    <form  method="get" action="" id="searchform">
+                        <div>
+                            <input type="text" class="inputbox" value="search" onblur="if (this.value == ''){this.value = 'search'; }" onfocus="if (this.value == 'search') {this.value = ''; }"/>
+                        </div>
+                    </form>
+                </div>
+                <% if !flash[:notice].blank? %>
+                <div class="notice">
+                    <%= flash[:notice] %>
+                </div>
+                <% end %>
+                <div id="content">
+                    <%= yield %>
+                    <div class="clear">
+                    </div>
+                </div><!-- end #content --><br/>
+                <div id="footer">
+                    <div id="footer-text">
+                        <p id="copyright">
+                            &copy; oseose.com / Labinot Halilaj / All Rights Reserved
+                        </p>
+                    </div><!-- end #footer-text -->
+                </div><!-- end #footer -->
+            </div><!-- end #container -->
+        </div>
+    </body>
 </html>
