--- a/app/views/products/delete.html.erb
+++ b/app/views/products/delete.html.erb
@@ -1,19 +1,36 @@
 <% @page_title = "Delete Product: #{@product.name}" %>
 
-<%= link_to("<< Back to List", {:action => 'list'}, :class => 'back-link') %>
-
-<div class="product delete">
-  <h2>Delete Product</h2>
-  
-  <%= form_for(:product, :url => {:action => 'destroy', :id => @product.id}) do |f| -%>
-
-    <p>Are you sure you want to permanently delete this product?</p>
-  
-    <p class="reference-name"><%= @product.name %></p>
-  
-    <div class="form-buttons">
-      <%= submit_tag("Delete Product") %>
+<h2 class="pagetitle">Delete Product</h2>
+<hr />
+<div class='alignleft'>
+    <%= link_to(content_tag( :span, "Back to List"), {:action => 'list'}, :class => 'button') %>
+</div>
+<br/>
+<hr />
+<div id="content-full">
+    <div id="contleft">
+        <%= form_for(:product, :url => {:action => 'destroy', :id => @product.id}) do |f| %>
+        <hr/>
+        <div id='conthold'>
+           
+            <ul class="prod-type1">
+                <li>
+                    <div class="prod-img-type1" >
+                        <h2><%= @product.name %></h2>
+                        <a href="#">
+                        <img src="<%= @product.photo.url(:small) %>"></a>
+                    </div>
+                </li>
+            </ul>
+             <h6>
+                Are you sure you want to permanently delete this product?
+            </h6>
+            <p class="reference-name"><%= @product.brand %> <%= @product.name %> <%= @product.modelnr %></p>
+            <div class="tool_btn">
+                <input type="submit" name="submit" class="button" value="Delete Product" />
+            </div>
+        <hr/>
+        </div>
+        <% end %>
     </div>
-    
-  <% end %>
 </div>
