--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -3,10 +3,10 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>University Asset Management System | <%= @page_title || 'Admin Area' %></title>
+        <title>University Asset Management System | <%= @page_title || 'Public Area' %></title>
         <meta name="author" content="Labinot Halilaj">
         <%= stylesheet_link_tag('style', 'demo_table_jui', 'TableTools', :media => 'all') %>
-        <%= javascript_include_tag :defaults, 'jquery.dataTables.js', 'TableTools.js', 'ZeroClipboard.js' %>
+        <%= javascript_include_tag :defaults, 'jquery.dataTables.js', 'TableTools.js' %>
         <script type="text/javascript" charset="utf-8">
             $(document).ready( function() {
                 $('#example').dataTable({});
