Added Suppliers and Employees, fixed image upload

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -11,6 +11,18 @@
     <hr />
     <div id="content-full">
         <%= form_for(:category, :html => { :multipart => true }, :url => {:action => 'create'}) do |f| %>
+        
+                    <div id="contsmallleft">
+            <hr/>
+            <div id='contholdl' align="center">
+
+                <br/>
+                <h2 >New Category</h2>
+                <img  src="/images/themeimg/category.jpg">
+                <hr/>
+            </div>  
+            </div>
+        
         <div id="contleft">
             <hr/>
             <div id='conthold'>
