--- a/app/views/employees/list.html.erb
+++ b/app/views/employees/list.html.erb
@@ -17,7 +17,7 @@
                         <li>
                             <a href="#">
                             <span class="icon">
-                                <img  src="/images/themeimg/default-avatar.png"  width="46" height="46"></span>
+                              <img src="<%= employee.photo.url(:small) %>"></span>
                             <%= employee.first_name %> <%= employee.last_name %>
                             <br>
                             <small>
