--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -11,6 +11,16 @@
     <hr />
     <div id="content-full">
         <%= form_for(:product, :html => { :multipart => true }, :url => {:action => 'create'}) do |f| %>
+            <div id="contsmallleft">
+            <hr/>
+            <div id='contholdl' align="center">
+
+                <br/>
+                <h2 >New Product</h2>
+                <img  src="/images/themeimg/products.jpg">
+                <hr/>
+            </div>  
+    </div>
         <div id="contleft">
             <hr/>
             <div id='conthold'>
