--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -11,11 +11,11 @@
     <div id="content-full">
     <div id="contsmallleft">
             <hr/>
-            <div id='conthold' align="center">
+            <div id='contholdl' align="center">
 
                 <br/>
                 <h2 >New Supplier</h2>
-                <img  src="/images/themeimg/default-avatar.png">
+                <img  src="/images/themeimg/suppliers.jpg">
                 <hr/>
             </div>  
     </div>
