--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -7,6 +7,9 @@
 <%= f.label(:last_name) %>
 <%= f.text_field(:last_name) %>
 <br/>
+<%= f.label(:photo) %>
+<%= f.file_field :photo %><br/>
+<br/>
 <%= f.label(:university_nr) %>
 <%= f.text_field(:uni_nr) %>
 <br/>
