--- a/app/views/suppliers/_form.html.erb
+++ b/app/views/suppliers/_form.html.erb
@@ -10,6 +10,9 @@
 <%= f.label(:fiscal_nr) %>
 <%= f.text_field(:fiscal_nr) %>
 <br/>
+<%= f.label(:photo) %>
+<%= f.file_field :photo %><br/>
+<br/>
 <%= f.label(:owner) %>
 <%= f.text_field(:owner) %>
 <br/>
