--- a/app/views/suppliers/delete.html.erb
+++ b/app/views/suppliers/delete.html.erb
@@ -12,25 +12,25 @@
         <%= form_for(:supplier, :url => {:action => 'destroy', :id => @supplier.id}) do |f| %>
         <hr/>
         <div id='conthold'>
-           
-            <ul class="prod-type1">
+
+            <ul class="supp-type1">
                 <li>
-                    <div class="prod-img-type1" >
+                    <div class="supp-img-type1" >
                         <h2><%= @supplier.company_name %></h2>
-                        <a href="#">
-                        <img  src="/assets/companies/comtradelogo.gif"></a>
+                        <%= image_tag @supplier.photo.url(:small) %>
                     </div>
                 </li>
             </ul>
-             <h6>
-                Are you sure you want to permanently delete this supplier?
+            <h6>
+            Are you sure you want to permanently delete this supplier?
             </h6>
-            
-            <p class="reference-name"><%= @supplier.company_name %></p>
+            <p class="reference-name">
+                <%= @supplier.company_name %>
+            </p>
             <div class="tool_btn">
                 <input type="submit" name="submit" class="button" value="Delete Supplier" />
             </div>
-        <hr/>
+            <hr/>
         </div>
         <% end %>
     </div>
