--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -9,45 +9,42 @@
     <br/>
     <hr />
     <div id="content-full">
-        <div class="prod">
-            <div id="prod-content-left">
-                <div class="prod-col-left">
-                     <img  src="/assets/companies/comtradelogo.gif">
+        <div class="supp">
+            <div id="supp-content-left">
+                <br />
+                <div>
                 </div>
-            </div>
-            <div id="prod-content-right">
                 <br />
+                <div class="supp-map">
+                    <%= image_tag @supplier.photo.url(:large) %>
+                </div>
                 <br />
-                <span class="product-title"><%= @supplier.company_name %></span>
+                </b>Services:</b>
                 <br />
-                <p>
-                    Bussiness Nr: <%= @supplier.business_nr %>
-                    <br />
-                    Fiscal Nr: <%= @supplier.fiscal_nr %>
-                    <br />
-                    Owner: <%= @supplier.owner %>
-                    <br />
-                    Address: <%= @supplier.address %>
-                    <br />
-                    Phone: <%= @supplier.phone %>
-                    <br />
-                    Status: <%= @supplier.status %>
-                    <br />
-                    Last Updated: <%= @supplier.updated_at %>
-                </p>
-                <br />
-                Services:
                 <blockquote>
                     <%= @supplier.services %>
                 </blockquote>
+                <p>
+                    <b>Company Name: </b><%= @supplier.company_name %>
+                    <br />
+                    <b>Bussiness Nr: </b><%= @supplier.business_nr %>
+                    <br />
+                    <b>Fiscal Nr: </b> <%= @supplier.fiscal_nr %>
+                    <br />
+                    <b>Owner: </b><%= @supplier.owner %>
+                    <br />
+                    <b>Address: </b><%= @supplier.address %>
+                    <br />
+                    <b>Phone: </b><%= @supplier.phone %>
+                    <br />
+                    <b>Status: </b><%= @supplier.status %>
+                    <br />
+                    <b>Last Updated: </b><%= @supplier.updated_at %>
+                </p>
                 <%= link_to(content_tag( :span, "Edit"), {:action => 'edit', :id => @supplier.id}, :class => 'button') %>
                 <%= link_to(content_tag( :span, "Delete"), {:action => 'delete', :id => @supplier.id}, :class => 'button') %>
+
             </div>
-            <div class="clear">
-            </div>
-            <p>
-                Ut enim ad minim veniam Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-            </p>
-        </div><!-- end .prod -->
+        </div><!-- end .supp -->
     </div>
 </div>
